[gd_scene load_steps=16 format=2]

[ext_resource path="res://addons/kenney_prototypes/assets/colors/dark/textures/texture_02.png" type="Texture" id=1]
[ext_resource path="res://scenes/characters/main/Character.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/buildings/AssetBuilding.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/buildings/PowerUpShop.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/Player.gd" type="Script" id=5]
[ext_resource path="res://scenes/buildings/Bank.tscn" type="PackedScene" id=6]
[ext_resource path="res://Game.gd" type="Script" id=7]
[ext_resource path="res://scenes/buildings/AssetBuilding.gd" type="Script" id=8]
[ext_resource path="res://assets/fonts/Nunito/Nunito-Black.ttf" type="DynamicFontData" id=9]

[sub_resource type="ProceduralSky" id=3]

[sub_resource type="Environment" id=4]
background_mode = 2
background_sky = SubResource( 3 )
ambient_light_color = Color( 0.5, 0.5, 0.5, 1 )
ambient_light_sky_contribution = 0.5
tonemap_mode = 2
tonemap_white = 16.0
adjustment_enabled = true
adjustment_brightness = 1.1
adjustment_contrast = 1.1
adjustment_saturation = 1.1

[sub_resource type="ArrayMesh" id=1]
resource_name = "cube_Cube001"
surfaces/0 = {
"aabb": AABB( 0, 0, 0, 2, 2, 2.00001 ),
"array_data": PoolByteArray( 0, 0, 0, 0, 0, 64, 0, 60, 1, 128, 0, 0, 0, 0, 255, 63, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 0, 0, 0, 64, 0, 60, 0, 0, 1, 128, 255, 127, 255, 127, 0, 0, 128, 179, 0, 0, 128, 63, 0, 0, 0, 0, 0, 64, 0, 60, 0, 0, 0, 0, 255, 127, 255, 63, 0, 0, 128, 179, 0, 0, 128, 63, 0, 0, 0, 64, 0, 64, 0, 60, 1, 128, 0, 0, 0, 0, 255, 63, 0, 0, 128, 63, 0, 0, 0, 0, 0, 0, 0, 64, 0, 64, 0, 60, 0, 0, 0, 0, 255, 127, 255, 63, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 64, 0, 64, 0, 60, 0, 0, 255, 127, 255, 127, 255, 127, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 60, 1, 128, 0, 0, 0, 0, 255, 63, 0, 0, 0, 0, 0, 0, 128, 63, 0, 0, 0, 0, 0, 0, 0, 60, 0, 0, 1, 128, 255, 127, 255, 127, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 0, 0, 0, 0, 0, 60, 255, 127, 255, 127, 1, 128, 255, 63, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 0, 64, 0, 0, 0, 60, 1, 128, 0, 0, 0, 0, 255, 63, 0, 0, 128, 179, 0, 0, 0, 0, 0, 0, 0, 64, 0, 0, 0, 60, 255, 127, 255, 127, 1, 128, 255, 63, 0, 0, 128, 63, 0, 0, 0, 0, 0, 0, 0, 64, 0, 0, 0, 60, 0, 0, 255, 127, 255, 127, 255, 127, 0, 0, 128, 63, 0, 0, 0, 0, 0, 64, 0, 0, 0, 64, 0, 60, 0, 0, 1, 128, 255, 127, 255, 127, 0, 0, 0, 0, 0, 0, 0, 0, 0, 64, 0, 0, 0, 64, 0, 60, 0, 0, 0, 0, 255, 127, 255, 63, 0, 0, 128, 63, 0, 0, 128, 63, 0, 64, 0, 0, 0, 64, 0, 60, 255, 127, 0, 0, 255, 127, 255, 127, 0, 0, 128, 179, 0, 0, 128, 63, 0, 64, 0, 64, 0, 64, 0, 60, 0, 0, 0, 0, 255, 127, 255, 63, 0, 0, 128, 63, 0, 0, 0, 0, 0, 64, 0, 64, 0, 64, 0, 60, 0, 0, 255, 127, 255, 127, 255, 127, 0, 0, 128, 179, 0, 0, 128, 63, 0, 64, 0, 64, 0, 64, 0, 60, 255, 127, 0, 0, 255, 127, 255, 127, 0, 0, 0, 0, 0, 0, 0, 0, 0, 64, 0, 0, 0, 0, 0, 60, 0, 0, 1, 128, 255, 127, 255, 127, 0, 0, 128, 63, 0, 0, 0, 0, 0, 64, 0, 0, 0, 0, 0, 60, 255, 127, 255, 127, 1, 128, 255, 63, 0, 0, 128, 179, 0, 0, 128, 63, 0, 64, 0, 0, 0, 0, 0, 60, 255, 127, 0, 0, 255, 127, 255, 127, 0, 0, 128, 63, 0, 0, 128, 63, 0, 64, 0, 64, 0, 0, 0, 60, 255, 127, 255, 127, 1, 128, 255, 63, 0, 0, 0, 0, 0, 0, 0, 0, 0, 64, 0, 64, 0, 0, 0, 60, 0, 0, 255, 127, 255, 127, 255, 127, 0, 0, 128, 63, 0, 0, 128, 63, 0, 64, 0, 64, 0, 0, 0, 60, 255, 127, 0, 0, 255, 127, 255, 127, 0, 0, 128, 63, 0, 0, 0, 0 ),
"array_index_data": PoolByteArray( 0, 0, 9, 0, 3, 0, 0, 0, 6, 0, 9, 0, 8, 0, 21, 0, 10, 0, 8, 0, 19, 0, 21, 0, 20, 0, 17, 0, 23, 0, 20, 0, 14, 0, 17, 0, 13, 0, 4, 0, 15, 0, 13, 0, 2, 0, 4, 0, 7, 0, 12, 0, 18, 0, 7, 0, 1, 0, 12, 0, 22, 0, 5, 0, 11, 0, 22, 0, 16, 0, 5, 0 ),
"blend_shape_data": [  ],
"format": 2097943,
"index_count": 36,
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 24
}

[sub_resource type="SpatialMaterial" id=7]
flags_world_triplanar = true
albedo_texture = ExtResource( 1 )
roughness = 0.5
uv1_scale = Vector3( 0.125, 0.125, 0.125 )
uv1_triplanar = true

[sub_resource type="BoxShape" id=8]

[sub_resource type="DynamicFont" id=9]
size = 11
outline_size = 2
outline_color = Color( 0.2, 0.2, 0.2, 1 )
use_filter = true
font_data = ExtResource( 9 )

[node name="Game" type="Spatial"]
script = ExtResource( 7 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 4 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, -0.707107, 0.707107, 0, -0.707107, -0.707107, 0, 10, 0 )
shadow_enabled = true

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.642788, 0.766044, 0, -0.766044, 0.642788, 0, 49, 43.6 )
fov = 30.0

[node name="TurnTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="Floor" type="StaticBody" parent="."]
transform = Transform( 20, 0, 0, 0, 1, 0, 0, 0, 20, 0, -0.2, 0 )
collision_layer = 5

[node name="Cube" type="MeshInstance" parent="Floor"]
transform = Transform( 1, 0, 0, 0, 0.1, 0, 0, 0, 1, -1, 0, -1 )
mesh = SubResource( 1 )
material/0 = SubResource( 7 )

[node name="CollisionShape" type="CollisionShape" parent="Floor"]
transform = Transform( 1, 0, 0, 0, 0.1, 0, 0, 0, 1, 0, 0.1, 0 )
shape = SubResource( 8 )

[node name="Character" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -12, 0, 5 )

[node name="Character2" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 12, 0, -5 )

[node name="Building" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -13, 0, -12.8 )
interest_mature_time = 15.0

[node name="Building4" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, -12.8 )
interest_mature_time = 15.0

[node name="Building2" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 14, 0, 12.2 )
interest_mature_time = 15.0

[node name="Building3" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0, 12.2 )
interest_mature_time = 15.0

[node name="Player1" type="Node" parent="."]
script = ExtResource( 5 )
device = 0
device_type = 1
pawn_np = NodePath("../Character")

[node name="Player2" type="Node" parent="."]
script = ExtResource( 5 )
device = 0
device_type = 2
color = Color( 0.890196, 0.121569, 0.121569, 1 )
pawn_np = NodePath("../Character2")

[node name="PowerUpShop" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.3, 0, -0.3 )

[node name="Bank" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -12.6, -1, 13.3 )
script = ExtResource( 8 )
player_np = NodePath("../Player1")

[node name="Bank2" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 12.4, -1, -12.7 )
script = ExtResource( 8 )
player_np = NodePath("../Player2")

[node name="PlayTimeLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -114.5
margin_right = 114.5
margin_bottom = 132.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 9 )
text = "Time"
align = 1

[connection signal="timeout" from="TurnTimer" to="." method="_on_TurnTimer_timeout"]
